--- a/s3-boto3.ipynb
+++ b/s3-boto3.ipynb
@@ -39,8 +39,8 @@
    ],
    "source": [
     "#Create S3 bucket - in a production systems you should avoid hard coding your AWS access and secret keys\n",
-    "AWS_ACCESS_KEY_ID = ''\n",
-    "AWS_SECRET_ACCESS_KEY = ''\n",
+    "AWS_ACCESS_KEY_ID = '<AWS_ACCESS_KEY_ID>'\n",
+    "AWS_SECRET_ACCESS_KEY = '<AWS_SECRET_ACCESS_KEY>'\n",
     "\n",
     "#Create a s3 client object\n",
     "s3_client = boto3.client('s3', region_name ='eu-west-2',\n",
@@ -137,6 +137,217 @@
     "# Download and rename downloaded file using file handler (obj)\n",
     "with open('Target/awesomecsv.copy.csv', 'wb') as obj:\n",
     "    s3_client.download_fileobj(bucket_name, myfile, obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multipart file transfers\n",
+    "# Multipart transfers is used when the file size exceeds the multipart_threshold attribute value.\n",
+    "\n",
+    "from boto3.s3.transfer import TransferConfig\n",
+    "\n",
+    "GByte = 1024**3\n",
+    "\n",
+    "config = TransferConfig(multipart_threshold=5*GByte)\n",
+    "\n",
+    "s3_client.upload_file(myfile, bucket_name, 'Downloads/awesomecsv.multipart.csv', Config=config)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://my-python-boto3-project.s3.amazonaws.com/Downloads/awesomecsv.public.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAWS3UO4HZZVEZQ63U%2F20210824%2Feu-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210824T120744Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&X-Amz-Signature=0aaf6f4f1182bcdecf22a3ea4ed65cc5561c1cb0cc6981d71c65a714b839f644\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Presigned URLs\n",
+    "#allow a user without AWS credentials or permissons to access an S3 object\n",
+    "# Presigned URLs grant temporary access for a limited period which is specified when the URL is generated\n",
+    "#the presigned URL can be enttered into a browser\n",
+    "\n",
+    "url_response = s3_client.generate_presigned_url('get_object',\n",
+    "                                                Params={'Bucket': bucket_name,\n",
+    "                                                       'Key':myfile},\n",
+    "                                                ExpiresIn= 3600) #3600seconds\n",
+    "\n",
+    "print(url_response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"Version\": \"2012-10-17\", \"Statement\": [{\"Sid\": \"AddPolicyPermission\", \"Effect\": \"Allow\", \"Principal\": \"*\", \"Action\": [\"s3:GetObject\"], \"Resource\": \"arn:aws:s3:::my-python-boto3-project/*\"}]}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': 'Q565ADQSM7PZVZPK',\n",
+       "  'HostId': 'cbjWeCL4BuBd9Gf68CDD6uZV5TyV+768JgMglzxo1ILGBTRcM4i+itqXNx8x0uc0P4+4TvQ4NYc=',\n",
+       "  'HTTPStatusCode': 204,\n",
+       "  'HTTPHeaders': {'x-amz-id-2': 'cbjWeCL4BuBd9Gf68CDD6uZV5TyV+768JgMglzxo1ILGBTRcM4i+itqXNx8x0uc0P4+4TvQ4NYc=',\n",
+       "   'x-amz-request-id': 'Q565ADQSM7PZVZPK',\n",
+       "   'date': 'Tue, 24 Aug 2021 12:18:36 GMT',\n",
+       "   'server': 'AmazonS3'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Configuring Bucket polices\n",
+    "# Bucket policies are defined in JSON.\n",
+    "\n",
+    "# Define a Bucket Policy\n",
+    "import json\n",
+    "\n",
+    "bucket_name = 'my-python-boto3-project'\n",
+    "bucket_policy = {\n",
+    "    'Version':'2012-10-17',\n",
+    "    'Statement':[{\n",
+    "        'Sid':'AddPolicyPermission',\n",
+    "        'Effect':'Allow',\n",
+    "        'Principal':'*',\n",
+    "        'Action':['s3:GetObject'],\n",
+    "        'Resource':f'arn:aws:s3:::{bucket_name}/*'\n",
+    "    }]\n",
+    "}\n",
+    "\n",
+    "bucket_policy = json.dumps(bucket_policy)\n",
+    "print(bucket_policy)\n",
+    "s3_client.put_bucket_policy(Bucket=bucket_name, Policy=bucket_policy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ResponseMetadata': {'RequestId': 'GHFKQSGQDEEJNT3V', 'HostId': 'yA1o+OLFVY/Fazixq3kJyXF1eJDu2wlQDBrvDi33kLv9Ytv4iei1ka7kvN/muY3BKEi+do2CPAo=', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amz-id-2': 'yA1o+OLFVY/Fazixq3kJyXF1eJDu2wlQDBrvDi33kLv9Ytv4iei1ka7kvN/muY3BKEi+do2CPAo=', 'x-amz-request-id': 'GHFKQSGQDEEJNT3V', 'date': 'Tue, 24 Aug 2021 12:19:55 GMT', 'content-type': 'application/json', 'server': 'AmazonS3', 'content-length': '177'}, 'RetryAttempts': 0}, 'Policy': '{\"Version\":\"2012-10-17\",\"Statement\":[{\"Sid\":\"AddPolicyPermission\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Action\":\"s3:GetObject\",\"Resource\":\"arn:aws:s3:::my-python-boto3-project/*\"}]}'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Bucket policy - Retrieve Bucket policy\n",
+    "result = s3_client.get_bucket_policy(Bucket='my-python-boto3-project')\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': 'VKYG1XPP75Q8N971',\n",
+       "  'HostId': 'yj8A8qvpzaxSyFUYWaTL7GhlmKaRaJc0t0NBu9kBV7BbXC20uDYdZeoF4ATeLrqH1sJZk77mTYA=',\n",
+       "  'HTTPStatusCode': 204,\n",
+       "  'HTTPHeaders': {'x-amz-id-2': 'yj8A8qvpzaxSyFUYWaTL7GhlmKaRaJc0t0NBu9kBV7BbXC20uDYdZeoF4ATeLrqH1sJZk77mTYA=',\n",
+       "   'x-amz-request-id': 'VKYG1XPP75Q8N971',\n",
+       "   'date': 'Tue, 24 Aug 2021 12:22:34 GMT',\n",
+       "   'server': 'AmazonS3'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Bucket Policy - Delete Bucket policy\n",
+    "s3_client.delete_bucket_policy(Bucket='my-python-boto3-project')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': 'GZGNPB1GGP8P55WX',\n",
+       "  'HostId': '8/IWUNLWFJFTrM1ccWP82HZgcFwFCxfxRnMEuClh86xHUM1p0TtA5lfhl/otIX1zVPoDWLHA1TA=',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amz-id-2': '8/IWUNLWFJFTrM1ccWP82HZgcFwFCxfxRnMEuClh86xHUM1p0TtA5lfhl/otIX1zVPoDWLHA1TA=',\n",
+       "   'x-amz-request-id': 'GZGNPB1GGP8P55WX',\n",
+       "   'date': 'Tue, 24 Aug 2021 12:28:43 GMT',\n",
+       "   'server': 'AmazonS3',\n",
+       "   'content-length': '0'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Setting Up a Bucket CORS Configuration \n",
+    "# CORS - Cross Origin Resource Sharing enables clients from one domain access resources in another domain.\n",
+    "\n",
+    "# You can use this method to allow sites access objects in your bucket.\n",
+    "\n",
+    "# Set Bucket CORS\n",
+    "cors_configuration = {\n",
+    "    'CORSRules': [\n",
+    "        {'AllowedHeaders':['AUthorization'],\n",
+    "        'AllowedMethods':['GET','PUT'],\n",
+    "        'AllowedOrigins':[\"*\"],\n",
+    "        'ExposeHeaders':['GET','PUT'],\n",
+    "        'MaxAgeSeconds':3000\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "s3_client.put_bucket_cors(Bucket=bucket_name, CORSConfiguration = cors_configuration\n",
+    "                         )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'AllowedHeaders': ['AUthorization'], 'AllowedMethods': ['GET', 'PUT'], 'AllowedOrigins': ['*'], 'ExposeHeaders': ['GET', 'PUT'], 'MaxAgeSeconds': 3000}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Retrieving a Bucket CORS Configuration\n",
+    "cors_response = s3_client.get_bucket_cors(Bucket='my-python-boto3-project')\n",
+    "print(cors_response['CORSRules'])"
    ]
   },
   {
