--- a/s3-boto3.ipynb
+++ b/s3-boto3.ipynb
@@ -38,11 +38,11 @@
     }
    ],
    "source": [
-    "#Create S3 bucket - in a production systems you should avoid hard coding your AWS access and secret keys\n",
+    "#Create S3 bucket - in production systems you should avoid hard coding your AWS access and secret keys\n",
     "AWS_ACCESS_KEY_ID = '<AWS_ACCESS_KEY_ID>'\n",
     "AWS_SECRET_ACCESS_KEY = '<AWS_SECRET_ACCESS_KEY>'\n",
     "\n",
-    "#Create a s3 client object\n",
+    "#Create an s3 client object\n",
     "s3_client = boto3.client('s3', region_name ='eu-west-2',\n",
     "                        aws_access_key_id = AWS_ACCESS_KEY_ID,\n",
     "                        aws_secret_access_key = AWS_SECRET_ACCESS_KEY)\n",
@@ -50,7 +50,7 @@
     "#Specify location of the s3 bucket using the Configuration parameter\n",
     "location = {'LocationConstraint': 'eu-west-2'}\n",
     "\n",
-    "#Use the s3 client to create_bucket method to create a bucket\n",
+    "#Use the s3 client create_bucket method to create a bucket\n",
     "s3_client.create_bucket(Bucket = 'my-python-boto3-project',\n",
     "                       CreateBucketConfiguration = location)"
    ]
